...
        android:text="Please provide your registered\nEmail address."
        android:textStyle="bold"
        android:gravity="center"/>


    <EditText
        android:id="@+id/resetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Email"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Reset Link"
        android:textColor="@color/white"
...
