<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
              android:background="@drawable/background"
              tools:context=".LoginActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

            <ImageView
                    android:layout_width="@dimen/logo_w_h"
                    android:layout_height="@dimen/logo_w_h"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:src="@mipmap/ic_launcher" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Log In"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:gravity="center"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="Email/username"
                    android:background="@color/white"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:id="@+id/email_login"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:background="@color/white"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:id="@+id/password_login"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Login"
                    android:background="#5e35b1"
                    android:textColor="@color/white"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:id="@+id/btn_login"/>

            <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:text="@string/btn_forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="15sp" />

            <Button
                    android:id="@+id/btn_noaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/btn_link_to_register"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>